fixed the horizontal overflow for the desktop screen

--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -59,6 +59,7 @@ main {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 2rem;
+  font-family: "Outfit", sans-serif;
   color: var(--text-color);
 }
 
@@ -151,6 +152,7 @@ position: relative;
   width: 343px;
   font-size: 18px;
   line-height: 28px;
+  font-family: "Outfit", sans-serif;
 }
 
 .third-page-image{
@@ -186,6 +188,7 @@ position: relative;
   font-size: 18px;
   line-height: 28px;
   color: #FFFFFF;
+  font-family: "Outfit", sans-serif;
 }
 
 footer{
@@ -206,6 +209,7 @@ footer{
   font-size: 16px;
   line-height: 26px;
   color: #FFFFFF;
+  font-family: "Outfit", sans-serif;
 }
 .socials{
   max-width: 100px;
@@ -357,41 +361,32 @@ footer{
     top: 0;
   }
   .top-page-text{
-    transform: translateX(-16.2rem);
-    width: 100%;
+ width: 85%;
     position: absolute;
-    top: 189px;
+    left: 13rem;
+    top: -3rem;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
   }
-  .top-page-heading{
+ .top-page-heading{
     max-width: 514px;
     max-height: 176px;
     line-height: 88px;
     font-size: 96px;
     color: #ffffff;
-    position: absolute;
-    left: 27rem;
     background: linear-gradient(to right, white 64%, black 50%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    position: relative;
-    z-index: 2;
   }
-  .top-page-description{
+       .top-page-description{
     max-width: 350px;
     max-height: 160px;
     line-height: 32px;
     font-size: 22px;
     color:var(--text-color);
-  }
-  .desktop-only-container{
-    position: absolute;
-    color: var(--text-color);
-    left: 74rem;
-    top: -0.4rem;
   }
 
   .grid-container{
@@ -453,13 +448,13 @@ footer{
     line-height: 32px;
   }
   footer{
-    width: 100%;
+    min-width: 100%;
     height: 244px;
     background-color: var(--heading-color);
     padding: 4rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    padding: 6rem;
   }
   .footer-heading{
     min-width: 159.57px;
@@ -467,7 +462,7 @@ footer{
   }
   .footer-description{
     max-width : 430px;
-    max-height: 184px;
+    max-height: 84px;
     font-size: 18px;
     line-height: 28px;
     color: #FFFFFF;
