--- a/starter-code/location.css
+++ b/starter-code/location.css
@@ -112,6 +112,7 @@ address{
 .location-page-description p{
   font-size: 18px;
   line-height: 28px;
+  font-family: "Outfit", sans-serif;
 }
 footer{
   width: 100%;
@@ -122,7 +123,7 @@ footer{
   box-sizing: border-box;
 }
 .footer-heading{
-  min-width: 110.5;
+  min-width: 110.5px;
   max-height: 40px;
 }
 .footer-description{
@@ -131,6 +132,7 @@ footer{
   font-size: 16px;
   line-height: 26px;
   color: var(--heading-color);
+  font-family: "Outfit", sans-serif;
 }
 .socials{
   max-width: 100px;
